<resources>
    <string name="app_name">CS 125 MP2</string>

    <string name="setup_screen_title">Set up ConnectN</string>
    <string name="game_screen_title">Connect%d</string>

    <string name="player1_name_label">Player 1</string>
    <string name="player2_name_label">Player 2</string>
    <string name="width_label">Width</string>
    <string name="height_label">Height</string>
    <string name="n_label">N</string>
    <string name="start_button_text">Start</string>
    <string name="invalid_setup_text">Invalid board setup.</string>
    <string name="to_move_text">to play</string>
    <string name="winner_text">%s wins!</string>
    <string name="player1_info_text">%1$s (%2$d)</string>
    <string name="player2_info_text">(%2$d) %1$s</string>
    <string name="new_game_text">New Game</string>
    <string name="back_setup_text">Change Setup</string>

    <string name="player1_name_default">Chuchu</string>
    <string name="player2_name_default">Xyz</string>
    <string name="width_default">10</string>
    <string name="height_default">8</string>
    <string name="n_default">4</string>
</resources>
