<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/game_container"
    tools:context=".GameActivity">

    <GridLayout
        android:id="@+id/board"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"></GridLayout>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/players_info_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:orientation="vertical"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/player1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/player1_name_default"
                android:textColor="@color/player1Color" />

            <TextView
                android:id="@+id/player1_turn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/to_move_text" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:orientation="vertical"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/player2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/player2_name_default"
                android:textAlignment="textEnd"
                android:textColor="@color/player2Color" />

            <TextView
                android:id="@+id/player2_turn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/to_move_text" />
        </LinearLayout>
    </android.support.constraint.ConstraintLayout>

    <TextView
        android:id="@+id/winner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/winner_text"
        android:textSize="18sp" />

    <LinearLayout
        android:id="@+id/game_control_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal">

        <Button
            android:id="@+id/new_game_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/new_game_text" />

        <Button
            android:id="@+id/back_setup_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/back_setup_text" />
    </LinearLayout>

</LinearLayout>